hphp/hack/test/typecheck/goto/goto_invalid_label.php.exp
File "goto_invalid_label.php", line 4, characters 10-10:
A semicolon `;` is expected here. (Parsing[1002])
File "goto_invalid_label.php", line 4, characters 8-8:
Undefined goto label: `1` (Naming[2073])
